Getting rid of namespace

--- a/coq.opam.mustache
+++ b/coq.opam.mustache
@@ -50,7 +50,7 @@ tags: [
 {{# date }}
   "date:{{ date }}"
 {{/ date }}
-  "logpath:{{ namespace }}"
+  "logpath:{{ shortname }}"
 ]
 authors: [
 {{# authors }}
