--- a/dune.mustache
+++ b/dune.mustache
@@ -2,6 +2,6 @@
 ; Follow the instructions on https://github.com/coq-community/templates to regenerate.
 
 (coq.theory
- (name {{ namespace }})
+ (name {{ shortname }})
  (package {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }})
  (synopsis "{{& synopsis }}"))
