Changing templates to accept the sldg org

--- a/README.md.mustache
+++ b/README.md.mustache
@@ -108,7 +108,7 @@ The easiest way to install the latest released version of {{& fullname }}
 is via [OPAM](https://opam.ocaml.org/doc/Install.html):
 
 ```shell
-opam repo add coq-released https://coq.inria.fr/opam/released
+opam repo add ku-sldg-repo https://aromatisse.ittc.ku.edu
 opam install {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }}
 ```
 
