--- a/.travis.yml.mustache
+++ b/.travis.yml.mustache
@@ -17,6 +17,9 @@ language: shell
       echo \"Build triggered by ${TRAVIS_EVENT_TYPE}\"
       export PS4='+ \e[33;1m(\$0 @ line \$LINENO) \$\e[0m '
       set -ex  # -e = exit on failure; -x = trace for debug
+{{# sldg_dev_pkgs_needed }}
+      opam repo -a --set-default add ku-sldg-repo https://aromatisse.ittc.ku.edu
+{{/ sldg_dev_pkgs_needed }}
 {{# ci_extra_dev }}
       opam repo -a --set-default add coq-extra-dev https://coq.inria.fr/opam/extra-dev
 {{/ ci_extra_dev }}
