--- a/docker-action.yml.mustache
+++ b/docker-action.yml.mustache
@@ -37,20 +37,13 @@ jobs:
 {{! Change delimiters to avoid the next line being parsed as mustache syntax. }}
 {{=<% %>=}}
           custom_image: ${{ matrix.image }}
-<%# sldg_dev_pkgs_needed %>
           before_install: |
             startGroup "Setup and print opam config"
-              opam repo -a --set-default add ku-sldg-repo https://aromatisse.ittc.ku.edu
+<%# ci_extra_repos %>
+              opam repo -a --set-default add {{ name }} {{ url }}
+<%/ ci_extra_repos %>
               opam config list; opam repo list; opam list
             endGroup
-<%/ sldg_dev_pkgs_needed %>
-<%# ci_extra_dev %>
-          before_install: |
-            startGroup "Setup and print opam config"
-              opam repo -a --set-default add coq-extra-dev https://coq.inria.fr/opam/extra-dev
-              opam config list; opam repo list; opam list
-            endGroup
-<%/ ci_extra_dev %>
 <%# ci_test_dependants %>
           after_script: |
             startGroup "Test dependants"
