--- a/README.md.mustache
+++ b/README.md.mustache
@@ -108,7 +108,10 @@ The easiest way to install the latest released version of {{& fullname }}
 is via [OPAM](https://opam.ocaml.org/doc/Install.html):
 
 ```shell
-opam repo add ku-sldg-repo https://aromatisse.ittc.ku.edu
+{{# ci_extra_repos }}
+opam repo add -a --set-default {{ name }} {{ url }}
+{{/ ci_extra_repos }}
+opam repo add coq-released https://coq.inria.fr/opam/released
 opam install {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }}
 ```
 
