--- a/_CoqProject.mustache
+++ b/_CoqProject.mustache
@@ -1,1 +1,2 @@
--Q _build/default/theories {{ shortname }}
+-R _build/default/theories {{ shortname }}
+{{# dune }}-I _build/install/default/lib{{/ dune }}
