--- a/_CoqProject.mustache
+++ b/_CoqProject.mustache
@@ -1,2 +1,2 @@
--R _build/default/theories {{ shortname }}
+-R _build/default/theories {{ lib-name }}
 {{# dune }}-I _build/install/default/lib{{/ dune }}
