--- a/dune.mustache
+++ b/dune.mustache
@@ -2,7 +2,7 @@
 ; Follow the instructions on https://github.com/coq-community/templates to regenerate.
 
 (coq.theory
- (name {{ shortname }})
+ (name {{ lib-name }})
  (package {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }})
  {{# ocaml_plugin }}(plugins {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }}.plugin){{/ ocaml_plugin }}
  (synopsis "{{& synopsis }}"))
