--- a/dune.mustache
+++ b/dune.mustache
@@ -2,7 +2,8 @@
 ; Follow the instructions on https://github.com/coq-community/templates to regenerate.
 
 (coq.theory
- (name {{ lib-name }})
+ (name {{ lib_name }})
  (package {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }})
+ (theories{{#dependencies }}{{# lib_name }} {{ lib_name }}{{/ lib_name }}{{/ dependencies}})
  {{# ocaml_plugin }}(plugins {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }}.plugin){{/ ocaml_plugin }}
  (synopsis "{{& synopsis }}"))
