--- a/dune.mustache
+++ b/dune.mustache
@@ -4,6 +4,6 @@
 (coq.theory
  (name {{ lib_name }})
  (package {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }})
- (theories{{#dependencies }}{{# lib_name }} {{ lib_name }}{{/ lib_name }}{{/ dependencies}})
+ (theories{{# dependencies }}{{# opam }} {{ lib_name }}{{/ opam }}{{/ dependencies }})
  {{# ocaml_plugin }}(plugins {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }}.plugin){{/ ocaml_plugin }}
  (synopsis "{{& synopsis }}"))
