--- a/docker-action.yml.mustache
+++ b/docker-action.yml.mustache
@@ -40,7 +40,7 @@ jobs:
           before_install: |
             startGroup "Setup and print opam config"
 <%# ci_extra_repos %>
-              opam repo -a --set-default add {{ name }} {{ url }}
+              opam repo -a --set-default add <% name %> <% url %>
 <%/ ci_extra_repos %>
               opam config list; opam repo list; opam list
             endGroup
