--- a/dune.mustache
+++ b/dune.mustache
@@ -4,6 +4,16 @@
 (coq.theory
  (name {{ lib_name }})
  (package {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }})
- (theories{{# dependencies }}{{# opam }} {{ lib_name }}{{/ opam }}{{/ dependencies }})
+ (theories{{# dependencies }}{{# opam.lib_name }} {{ lib_name }}{{/ opam.lib_name }}{{/ dependencies }})
  {{# ocaml_plugin }}(plugins {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }}.plugin){{/ ocaml_plugin }}
  (synopsis "{{& synopsis }}"))
+
+{{# coq_menhir_files }}
+(rule
+ (target {{ target_file_name }})
+ (deps {{ target_file_name }}y)
+ (action
+  (run menhir --explain --coq %{deps})
+ )
+)
+{{/ coq_menhir_files }}
