--- a/dune-project.mustache
+++ b/dune-project.mustache
@@ -1,3 +1,10 @@
 (lang dune 3.17)
+{{# coq_trans_deps_workaround }}
+; Workaround for https://github.com/ocaml/dune/issues/11483
+(warnings (deprecated_coq_lang_lt_08 disabled))
+(using coq 0.6)
+{{/ coq_trans_deps_workaround }}
+{{^ coq_trans_deps_workaround }}
 (using coq 0.10)
+{{/ coq_trans_deps_workaround }}
 (name {{ shortname }})
