--- a/dune.mustache
+++ b/dune.mustache
@@ -1,6 +1,8 @@
 ; This file was generated from `meta.yml`, please do not edit manually.
 ; Follow the instructions on https://github.com/coq-community/templates to regenerate.
 
+(include_subdirs qualified)
+
 (coq.theory
  (name {{ lib_name }})
  (package {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }})
