--- a/ocaml_plugin.mustache
+++ b/ocaml_plugin.mustache
@@ -2,13 +2,13 @@
 ; Follow the instructions on https://github.com/coq-community/templates to regenerate.
 
 (library
- (name coq_{{ shortname }})
+ (name rocq_{{ shortname }})
  (public_name {{ opam_name }}{{^ opam_name }}coq-{{ shortname }}{{/ opam_name }}.plugin)
  (synopsis "{{& synopsis }}")
  (flags (:standard -w -9-27))
  (libraries{{# ocaml_libraries }} {{ name }}{{/ ocaml_libraries}})
  (modules (:standard))
 )
-{{# ocaml_coq_pp_files }}
-(coq.pp (modules{{# ocaml_coq_pp_files }} {{ name }}{{/ ocaml_coq_pp_files}}))
-{{/ ocaml_coq_pp_files }}
+{{# ocaml_rocq_pp_files }}
+(coq.pp (modules{{# ocaml_rocq_pp_files }} {{ name }}{{/ ocaml_coq_pp_files}}))
+{{/ ocaml_rocq_pp_files }}
