--- a/ocaml_plugin.mustache
+++ b/ocaml_plugin.mustache
@@ -10,5 +10,5 @@
  (modules (:standard))
 )
 {{# ocaml_rocq_pp_files }}
-(coq.pp (modules{{# ocaml_rocq_pp_files }} {{ name }}{{/ ocaml_coq_pp_files}}))
+(coq.pp (modules{{# ocaml_rocq_pp_files }} {{ name }}{{/ ocaml_rocq_pp_files}}))
 {{/ ocaml_rocq_pp_files }}
